crates/tiler-ir/tests/index-region/fail/forge_verified.rs
use tiler_ir::index::VerifiedIndexRegion;

fn main() {
    let _forged = VerifiedIndexRegion {};
}
